fix some references

--- a/reports/sections/threats/ThreatMitigation-supplementary.Rmd
+++ b/reports/sections/threats/ThreatMitigation-supplementary.Rmd
@@ -12,11 +12,11 @@ bibliography: '`r here::here("app/data/mybiblio.bib")`'
 
 **Threats** are defined as “any human activity or process that has caused, is causing, or may cause harm, death, or behavioral changes to a wildlife species at risk, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur. A human activity may exacerbate a natural process” [@DFO2014_Threat]. 
 
-Threats therefore encompass both natural and anthropogenic activities, and are typically required to be discussed in relation to both the species and its habitat. Threats can be both indirect (e.g., altered fire regime, reduction in prey populations, introduced species) or direct (e.g., entanglement in fishing gear) [@DFO2014_Threat]. Naturally occurring processes (e.g., aging, disease, or predation) are only considered to be threats if they have been altered by human activities, or pose a threat to a critically small or isolated population [@DFO2014_Threat]. Identifying threats and determining how they may affect each species are crucial to prioritize recovery measures and inform management decisions [@DFO2014_Threat].
+Threats therefore encompass both natural and anthropogenic activities, and are typically required to be discussed in relation to both the species and its habitat. Threats can be both indirect (e.g., altered fire regime, reduction in prey populations, introduced species) or direct [e.g., entanglement in fishing gear, @DFO2014_Threat]. Naturally occurring processes (e.g., aging, disease, or predation) are only considered to be threats if they have been altered by human activities, or pose a threat to a critically small or isolated population [@DFO2014_Threat]. Identifying threats and determining how they may affect each species are crucial to prioritize recovery measures and inform management decisions [@DFO2014_Threat].
 
 Threats are mentioned in many of the documents within the SARA recovery planning process (Figure \@ref(fig:sara-chart)). However, due to issues such as changes in the requirements of these documents over time, and limited species information, the level of detail for threats may be varied.
 
-**Mitigation** refers to the measures used to avoid, minimize, eliminate, reduce, control or offset adverse effects of each threat (adapted from the Impact Assessment @IAA). 
+**Mitigation** refers to the measures used to avoid, minimize, eliminate, reduce, control or offset adverse effects of each threat [adapted from the Impact Assessment Act -@IAA]. 
 
 Similar to threats, mitigation measures are not consistently included or characterized throughout each document created as part of the SARA recovery planning process, and may have different levels of detail for each species. Generally, the most detailed information of mitigation measures for each threat are found within a species’ Action Plan (for species designated extirpated, endangered or threatened), or Management Plan (for species of special concern). Associated information within each document may include descriptions such as timelines for completion, and suggested jurisdictions/organizations to undertake each mitigation measure (e.g., government bodies, universities, industry). Mitigation measures for each threat may not be explicitly stated as such, but may instead be referred to as other terms such as “conservation measures” or “recovery measures” when addressing the proposed action for each threat.
 
@@ -29,7 +29,7 @@ SARA is carried out through the SARA recovery planning process, a multi-step app
 Although the creation of certain documents is a requirement under SARA, delays in the process are known to occur [@mcdevitt2015_missing]. In addition, many species are still under review for the addition to SARA (the full list is included here: <https://www.canada.ca/en/environment-climate-change/services/species-risk-act-accord-funding/listing-process/wildlife-species-amendment-list-schedule-1.html>). Species assessed by COSEWIC but still under consideration for Schedule 1 will therefore likely have a COSEWIC status report and Recovery Potential Assessment, but will not have a Recovery Strategy, Action Plan, or Management Plan. As well, deviations in the process may occur for some species, factors such as the availability of resources at the time. Therefore, not all of the documents listed in Figure \@ref(fig:sara-chart) may be available for each species, despite its designation. Lastly, documents which do not address threats or threat mitigation are not included in this section of the Report (e.g., Response Statements created by the DFO minister). However, these are available on the Species at Risk Registry if required (URLs are provided in Tables \@ref(tab:cosewic-table) and \@ref(tab:sara-table)). 
 
 
-```{r sara-chart, out.width = "100%", fig.cap = "Simplified overview of the recovery planning process under the Canadian Species at Risk Act (adapted from Newediuk et al. (2021) and McDevitte-Irwin et al. (2015)). The documents reviewed for threat information in this review are represented as orange boxes. In addition, blue boxes represent government bodies, and green boxes represent actions taken. More detailed explanations of each box are included in the main text. Letters in white circles refer to SARA designations including EX: extirpated, T: threatened, E: endangered, and SC: special concern. The process reads from left to right, starting with the creation of the COSEWIC Status Report. Where applicable, mandated time frames are shown above the arrows, although the process may experience time delays at various steps [@mcdevitt2015_missing]. Recovery Potential Assessments (RPAs) are typically not created for species with a COSEWIC designation of special concern. Threat Assessments (not shown) are typically created as part the RPA process, and may be created as a separate document. Schedule 1 is the official federal list of wildlife species at risk.", echo=FALSE}
+```{r sara-chart, out.width = "100%", fig.cap = "Simplified overview of the recovery planning process under the Canadian Species at Risk Act [adapted from Newediuk et al. -@newediuk2021_sociopolitical; McDevitte-Irwin et al. -@mcdevitt2015_missing]. The documents reviewed for threat information in this review are represented as orange boxes. In addition, blue boxes represent government bodies, and green boxes represent actions taken. More detailed explanations of each box are included in the main text. Letters in white circles refer to SARA designations including EX: extirpated, T: threatened, E: endangered, and SC: special concern. The process reads from left to right, starting with the creation of the COSEWIC Status Report. Where applicable, mandated time frames are shown above the arrows, although the process may experience time delays at various steps [@mcdevitt2015_missing]. Recovery Potential Assessments (RPAs) are typically not created for species with a COSEWIC designation of special concern. Threat Assessments (not shown) are typically created as part the RPA process, and may be created as a separate document. Schedule 1 is the official federal list of wildlife species at risk.", echo=FALSE}
 knitr::include_graphics(here::here("reports/sections/Threats/SARAFlowchart.jpg"))
 ```
 
@@ -59,7 +59,7 @@ RPAs are typically provided to the DFO Minister after COSEWIC provides a species
 
 ###### *Change in RPA Procedure Over Time*
 
-RPAs were first developed in 2004 and new guidelines were developed in 2007 [@DFO2007_RPA]. Clarification to the process including how to document threat information was later provided [@DFO2010_Guidelines]. This lead to the creation of Threat Assessment guidelines [@DFO2014_Threat]. Due to these changes in procedure, the level of detail for RPAs may be different for each species, depending on when the information was compiled and published. Occasionally, RPAs are not created for certain species despite their COSEWIC designation (e.g., for leatherback sea turtles; @DFO2020_Turtles). Threat Assessments are also required to be conducted as part of the RPAs [@DFO2014_Threat]. However, Threat Assessments are sometimes created as standalone documents, and are therefore described in a separate section below.
+RPAs were first developed in 2004 and new guidelines were developed in 2007 [@DFO2007_RPA]. Clarification to the process including how to document threat information was later provided [@DFO2010_Guidelines]. This lead to the creation of Threat Assessment guidelines [@DFO2014_Threat]. Due to these changes in procedure, the level of detail for RPAs may be different for each species, depending on when the information was compiled and published. Occasionally, RPAs are not created for certain species despite their COSEWIC designation [e.g., for leatherback sea turtles, @DFO2020_Turtles]. Threat Assessments are also required to be conducted as part of the RPAs [@DFO2014_Threat]. However, Threat Assessments are sometimes created as standalone documents, and are therefore described in a separate section below.
 
 ###### *Types of RPAs*
 
