--- a/reports/sections/blueWhaleHab/bwhab_en.Rmd
+++ b/reports/sections/blueWhaleHab/bwhab_en.Rmd
@@ -59,7 +59,7 @@ polyText <- noquote(polyText)
 writeLines(polyText)
 ```
 
-```{r bw-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(blueWhaleHab_rr, "EN"), 'Blue Whale Important Habitat in the Western North Atlantic. Polygons delimit areas in Canadian waters that are important to Blue Whales for foraging and migration. These areas identified in the report by Lesage et al. (2018) are considered important for the survival and recovery of Blue Whales from the western North Atlantic population. Blue Whales most likely need to use several of these important habitats to fulfill their biological needs. As a result, access corridors and habitat they connect need to be considered equally important for the population.')}
+```{r bw-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(blueWhaleHab_rr, "EN"), 'Blue Whale Important Habitat in the Western North Atlantic. Polygons delimit areas in Canadian waters that are important to Blue Whales for foraging and migration. These areas identified in the report by @Lesage2018 are considered important for the survival and recovery of Blue Whales from the western North Atlantic population. Blue Whales most likely need to use several of these important habitats to fulfill their biological needs. As a result, access corridors and habitat they connect need to be considered equally important for the population.')}
 if (!is.null(blueWhaleHab_rr$data_sf)){
   bwPlotList <- plot_rr_sf(regionMap, blueWhaleHab_rr$data_sf, blueWhaleHab_rr$attribute, getColorMap = TRUE)
   bwPlotList$polyMap
