add SARA 2002 to bib file

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -449,6 +449,14 @@ Data, and Methods},
   url = {https://CRAN.R-project.org/package=robis}
 }
 
+@Manual{SARA2002,
+title = {An act respecting the protection of wildlife species at risk in Canada},
+author = {{SARA}},
+organization = {Species at Risk Act},
+year = {2002},
+url = {https://laws.justice.gc.ca/eng/acts/S-15.3/FullText.html},
+}
+
 @Article{sf,
   author = {Edzer Pebesma},
   title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
