more grammar edits

--- a/reports/sections/crithab/crithab_en.Rmd
+++ b/reports/sections/crithab/crithab_en.Rmd
@@ -69,12 +69,12 @@ if (critHabCheck) {
 
 ```{r crithab-table, echo=FALSE, results='asis'}
 if(critHabCheck){
-  knitr::kable(critTable, caption=paste(write_caption_blurb(crithab_rr, "EN"), "Species at Risk listed as Endangered or Threatened under the <i>Species at Risk Act</i> (SARA) with their critical habitat located within the search area. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species”. Critical habitat is identified in a species’ Recovery Strategy or Action Plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is <b>not</b> the authoritative source or advice for Species at Risk data. Please access the Species at Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative SARA report."), booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+  knitr::kable(critTable, caption=paste(write_caption_blurb(crithab_rr, "EN"), "Species at Risk listed as Endangered or Threatened under the Species at Risk Act [@SARA2002] with their critical habitat located within the search area. Critical habitat is defined under section 2 of SARA as, “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the Recovery Strategy or in an Action Plan for the species”. Critical habitat is identified in a species’ Recovery Strategy or Action Plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is <b>not</b> the authoritative source or advice for Species at Risk data. Please access the Species at Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative SARA report."), booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 }
 
 ```
 <br>
-```{r crithab-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(crithab_rr, "EN"), 'Critical habitat of Species at Risk listed as Endangered or Threatened under the Species at Risk Act [@SARA2002] in the Scotian Shelf Bioregion. Please see table above for complementary information. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species.” Critical habitat is identified in a species’ Recovery Strategy or Action Plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is not the authoritative source or advice for Species at Risk data. Please access the Species at Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative report.')}
+```{r crithab-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(crithab_rr, "EN"), 'Critical habitat of Species at Risk listed as Endangered or Threatened under the Species at Risk Act [@SARA2002] in the Scotian Shelf Bioregion. Please see table above for complementary information. Critical habitat is defined under section 2 of SARA as, “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the Recovery Strategy or in an Action Plan for the species.” Critical habitat is identified in a species’ Recovery Strategy or Action Plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is not the authoritative source or advice for Species at Risk data. Please access the Species at Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative report.')}
 if (!is.null(crithab_rr$data_sf)){
   critPlotList <- plot_rr_sf(regionMap, crithab_rr$data_sf,
                              crithab_rr$attribute, legendName = legendNameCrithab,
