--- a/reports/sections/crithab/crithab_en.Rmd
+++ b/reports/sections/crithab/crithab_en.Rmd
@@ -59,9 +59,9 @@ if (critHabCheck) {
 
 ```{r crithab-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
  Query_output_crit <- if(critHabCheck){
-   "* The search area overlaps with defined Species at Risk Critical Habitat."
+   "* The search area overlaps with defined Species at Risk Critical habitat."
  } else {
-   "* The search area does not overlap with defined Species at Risk Critical Habitat."
+   "* The search area does not overlap with defined Species at Risk Critical habitat."
  }
  writeLines(Query_output_crit)
 ```
