Add Gibson et al. 2011 to references

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -127,6 +127,17 @@ Data, and Methods},
   url = {https://CRAN.R-project.org/package=ggspatial}
 }
 
+@article{gibson2011populations,
+  title={Populations on the brink: low abundance of Southern Upland Atlantic salmon in Nova Scotia, Canada},
+  author={Gibson, A Jamie F and Bowlby, Heather D and Hardie, David C and O’Reilly, Patrick T},
+  journal={North American Journal of Fisheries Management},
+  volume={31},
+  number={4},
+  pages={733--741},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
 @article{Gomez2017SDM,
   author = {Gomez, C. and and Lawson, J. and Kouwenberg A.L. and Moors-Murphy, H.B. and Buren, A. and Fuentes-Yaco, C. and Marotte, E. and Wiersma Y. and Wimmer, T.},
   title = {Predicted distribution of whales at risk: identifying priority areas to enhance cetacean monitoring in the Northwest Atlantic Ocean},
