add Chadwick reference

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -12,6 +12,15 @@
   year = {2013}
 }
 
+@article{chadwick2007history,
+  title={History of annual multi-species trawl surveys on the Atlantic coast of Canada},
+  author={Chadwick, EMP and Brodie, W and Colbourne, E and Clark, D and Gascon, D and Hurlbut, T},
+  journal={Atlantic Zonal Monitoring Program Bulletin},
+  volume={6},
+  pages={25--42},
+  year={2007}
+}
+
 @Manual{data.table,
   title = {data.table: Extension of data.frame},
   author = {Matt Dowle and Arun Srinivasan},
