--- a/reports/sections/rv/rv_en.Rmd
+++ b/reports/sections/rv/rv_en.Rmd
@@ -38,10 +38,10 @@ table_RV <- table_RV %>% dplyr::rename("Season/Months" = Season.Months, "Descrip
 
 ```{r RV-table-setup}
 knitr::kable(table_RV, align = "l",
-      caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.", booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+      caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See @chadwick2007history for more information on the timeline and periodic adjustment of the 4VSW surveys.", booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
-##### *Area-specific Maritimes Research Vessel (RV) Survey search results*
+##### *Area-Specific Maritimes Research Vessel (RV) Survey Search Results*
 
 ```{r RV-results, include=FALSE, cache=FALSE}
 outputList <- master_intersect(rv_rr$data_sf, mapDataList, Year = minYear)
@@ -87,7 +87,7 @@ areaMap +
 ```{r RV-SAR-table}
 if (!is.null(outputList$studyData)) {
   if (nrow(rvSarTable) > 0) {
-    knitr::kable(rvSarTable, align="l", caption=paste("\\label{tab:rv_SAR_table}",  write_caption_blurb(rv_rr, "EN"), "Maritimes Research Vessel (RV) Survey records of species opbserved within the search area and listed by the <i>Species at Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the number of trawls in which a given species was sampled, relative to the total number of trawls within the search area. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(rvSarTable, align="l", caption=paste("\\label{tab:rv_SAR_table}",  write_caption_blurb(rv_rr, "EN"), "Maritimes Research Vessel (RV) Survey records of species opbserved within the search area and listed by the Species at Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the number of trawls in which a given species was sampled, relative to the total number of trawls within the search area. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
