--- a/reports/sections/template/template_en.rmd
+++ b/reports/sections/template/template_en.rmd
@@ -68,7 +68,7 @@ if (!is.null(templateOutputList$studyData)) {
 ```{r template-table}
 if (!is.null(templateOutputList$studyData)) {
   if (nrow(templateSarTable) > 0) {
-    knitr::kable(templateSarTable, align = "l", caption = paste("\\label{tab:template_table}", write_caption_blurb(template_rr, "EN"), "Template records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(templateSarTable, align = "l", caption = paste("\\label{tab:template_table}", write_caption_blurb(template_rr, "EN"), "Template records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
