add Whelk Open Data record to bib file

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -421,6 +421,13 @@ Data, and Methods},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/da99526e-284f-4e06-8d04-193785cd1a96}
 }
 
+@misc{OpenData_whelk,
+  author = {DFO},
+  title = {Biodiversity of the whelk (Buccinum) dredge survey in the St. Lawrence Estuary},
+  year = {2021},
+  howpublished = {Retrieved from https://open.canada.ca/data/dataset/e606ad01-843f-4730-93fa-f944dfbbbf07}
+}
+
 @techreport{PACM2021,
   author = {PACM},
   title = {Passive Acoustic Cetacean Map. 2021. Woods Hole (MA): NOAA Northeast Fisheries Science Center},
