Add whelk reference. Fix figure caption. Add a comma

--- a/reports/sections/whelk/whelk_en.rmd
+++ b/reports/sections/whelk/whelk_en.rmd
@@ -11,7 +11,7 @@ bibliography: '`r here::here("app/data/mybiblio.bib")`'
 
 ```{r eval=FALSE}
 if (FALSE) { 
-  # load in generic data, e.g.functions, study area, and base maps into the 
+  # load in generic data, e.g., functions, study area, and base maps into the 
   # environment, when knitting, these will be loaded through the child rmd.
   lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source)
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson"))
@@ -38,7 +38,7 @@ writeLines(noquote(whelk_rr$text$en))
 ```
 
 
-#### ***Area-specific Whelk Surveyresults***
+#### ***Area-Specific Whelk Survey Results***
 ```{r whelk-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
 whelkOutputList <- master_intersect(whelk_rr$data_sf, mapDataList)
@@ -62,7 +62,7 @@ whelkReport <- if (is.null(whelkOutputList$studyData)) {
 writeLines(noquote(whelkReport))
 ```
 
-```{r whelk-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(whelk_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from whelk records.')}
+```{r whelk-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(whelk_rr, "EN"), 'Map of whelk records within the search area (red outline) from @OpenData_shelk.')}
 if (!is.null(whelkOutputList$studyData)) {
   # common plotting function:
   plot_rr_sf(areaMap, whelkOutputList$mapData, attribute = 
