--- a/reports/sections/benthicEffort/benthicEffort_en.Rmd
+++ b/reports/sections/benthicEffort/benthicEffort_en.Rmd
@@ -20,7 +20,7 @@ if (FALSE) { #load in data:
 }
 ```
 
-### **Fishing effort within Significant Benthic Areas in Canada's Atlantic and Eastern Arctic marine waters** {#benthic-effort-section}    
+### **Fishing Effort Within Significant Benthic Areas in Canada's Atlantic and Eastern Arctic Marine Waters** {#benthic-effort-section}    
 
 ```{r benthicEffort-load, include=FALSE}
 load_rdata(c("benthicEffort_rr"), "MAR", env = environment())
@@ -35,7 +35,7 @@ Dataset description from the Open Data record [@OpenData_benthicEffort]:
 writeLines(noquote(benthicEffort_rr$text$en))
 ```
 
-##### *Area-specific Fishing effort within Significant Benthic Areas search results*
+##### *Area-Specific Fishing effort within Significant Benthic Areas Search Results*
 
 ```{r benthicEffort-results, echo=FALSE, results='asis'}
 outputListBenthicEffort <- master_intersect(benthicEffort_rr$data_sf, mapDataList,
@@ -62,13 +62,13 @@ benthicEffortReport <- if (is.null(outputListBenthicEffort$mapData)) {
 writeLines(noquote(benthicEffortReport))
 ```
 <br>
-```{r benthicEffort-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
+```{r benthicEffort-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area (red outline).')}
 if (!is.null(outputListBenthicEffort$mapData)) {
   plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData, bgCutoff=15)
 }
 ```
 
-```{r benthicEffort-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
+```{r benthicEffort-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area (red outline).')}
 if (!is.null(outputListBenthicEffort$mapData)) {
   plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData, bgCutoff=15)
 }
